crates/shipper-cli/tests/snapshots/cli_snapshots__clean_help.snap
---
source: crates/shipper-cli/tests/cli_snapshots.rs
expression: normalize_help_output(&stdout)
---
Delete the run artifacts under `state_dir` (default `.shipper`).

Removes `state.json`, `receipt.json`, `events.jsonl`, and any
`preflight-only-*.events.jsonl` sidecars. This discards the authoritative
event log for the run, so treat it as destructive: clean when you are
deliberately starting a fresh plan, not to work around a failed publish
(use `shipper resume` for that).

EXAMPLES:
    # Start a fresh plan after an abandoned run:
    shipper clean

    # Clear resumable state but keep the audit receipt:
    shipper clean --keep-receipt


Usage: shipper-cli clean [OPTIONS]

Options:
      --keep-receipt
          Keep receipt.json (remove state.json and all event logs only)

      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
