crates/shipper-cli/tests/snapshots/cli_snapshots__completion_missing_shell.snap
---
source: crates/shipper-cli/tests/cli_snapshots.rs
expression: redact_version(&stderr)
---
error: the following required arguments were not provided:
  <SHELL>

Usage: shipper.exe completion <SHELL>

For more information, try '--help'.
