crates/shipper-cli/tests/snapshots/cli_snapshots__help_text.snap
---
source: crates/shipper-cli/tests/cli_snapshots.rs
expression: normalize_help_output(&stdout)
---
Resumable, backoff-aware crates.io publishing for workspaces

Usage: shipper [OPTIONS] <COMMAND>

Commands:
  plan             Print the deterministic publish plan (dependency-first ordering)
  preflight        Run preflight checks without publishing
  publish          Execute the plan (will resume if a matching state file exists)
  resume           Resume a previous publish run
  rehearse         Rehearse a release against an alternate registry
  status           Compare local workspace versions to the registry
  doctor           Print environment and auth diagnostics
  inspect-events   View detailed event log
  inspect-receipt  View detailed receipt with evidence
  ci               Print CI configuration snippets for various platforms
  clean            Clean state files (state.json, receipt.json, events.jsonl, preflight-only-*.events.jsonl)
  yank             Yank a crate@version from the registry — containment, not undo
  plan-yank        Generate a reverse-topological yank plan from a receipt
  fix-forward      Generate a fix-forward supersession plan from a compromised receipt
  remediate        Generate or execute a receipt-driven remediation plan
  config           Configuration file management
  completion       Generate shell completion scripts for the specified shell
  help             Print this message or the help of the given subcommand(s)

Options:
  -V, --version
          Print version information. Combine with `--verbose` for commit, build-profile, and rustc metadata

      --config <CONFIG>
          Path to a custom configuration file (.shipper.toml)

      --manifest-path <MANIFEST_PATH>
          Path to the workspace Cargo.toml
          
          [default: Cargo.toml]

      --registry <REGISTRY>
          Cargo registry name (default: crates-io)

      --api-base <API_BASE>
          Registry API base URL (default: <https://crates.io>)

      --allow-loopback
          Permit loopback HTTP for an explicitly configured local test or rehearsal registry. Does not permit private-network destinations

      --package <PACKAGES>
          Restrict to specific packages (repeatable). If omitted, publishes all publishable workspace members

      --state-dir <STATE_DIR>
          Directory for shipper state and receipts (default: .shipper)

      --format <FORMAT>
          Output format: text (default) or json
          
          [default: text]
          [possible values: text, json]

      --verbose
          Show detailed dependency analysis for plan command

  -q, --quiet
          Suppress informational output

  -h, --help
          Print help (see a summary with '-h')
